--- a/local-test-scripts/Cargo.toml
+++ b/local-test-scripts/Cargo.toml
@@ -24,3 +24,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = "1.42.0"
 base64 = "0.13.0"
+solana-account-decoder = "1.18"
